Added database connection and migration

--- a/BookMvcWeb/appsettings.Development.json
+++ b/BookMvcWeb/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=FRIDAY-PC\\Friday_SQL;Integrated Security=True;Initial Catalog=BookMvcDb;Connect Timeout=30;Encrypt=False;Trusted_Connection=True; Trust Server Certificate=True;"
   }
 }
