Re-arranged the folder stucture & namepsaces of the files

--- a/BookMvcWeb/BookMvcWeb.csproj
+++ b/BookMvcWeb/BookMvcWeb.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookMvc.DataAccess\BookMvc.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
